# ascii-game-challenge

./: .gitignore  3  Cargo.toml  README.md
assets/: root_config.json
assets/cells/: cell_config.json
configs/: root_config.json
configs/assets/: asset_config.json
configs/cells/: cell_config.json
crates/app/: package-lock.json  package.json  vite.config.ts
crates/app/src/: App.tsx  config.ts  main.tsx  shared.d.ts  styles.css
crates/app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
crates/app/src-tauri/src/: export.rs  init.rs  main.rs  signal.rs  subscription.rs  tauri_bridge.rs  tauri_subscription.rs  tauri_webview.rs  webview.rs
crates/app/src-tauri/src/dispatchers/: application_dispatcher.rs  game_dispatcher.rs  general_dispatcher.rs  meta.rs  mod.rs  popup_dispatcher.rs  view_dispatcher.rs
crates/app/src-tauri/src/js_api/: did_mount.rs  events.rs  mod.rs  webview_did_subscribe.rs  webview_ecs_event.rs  webview_input_event.rs  weview_did_mount.rs
crates/cli/: Cargo.toml
crates/cli/src/: entry.rs  export.rs  init.rs  main.rs  shutdown.rs
crates/cli/src/components/: cell.rs  color.rs  mod.rs  tile.rs
crates/cli/src/handlers/: cli_ecs.rs  cli_input.rs  input.rs  key.rs  mod.rs  mouse_event_handler.rs  popup_event_handler.rs  popup_handler.rs  popup_input_handler.rs  subscription.rs  view_event_handler.rs  view_input_handler.rs
crates/cli/src/input/: input_manager.rs  mod.rs
crates/cli/src/macros/: colors.rs  mod.rs
crates/cli/src/managers/: input_manager.rs  mod.rs
crates/cli/src/managers/assets/: cache.rs  config.rs
crates/cli/src/managers/input/: input.rs  mod.rs
crates/cli/src/managers/sprite/: cache.rs  mod.rs
crates/cli/src/popup/: input.rs  mod.rs
crates/cli/src/state/: app.rs
crates/cli/src/traits/: drawable.rs  mod.rs
crates/cli/src/utils/: colors.rs  colors_utils.rs  draw_utils.rs  layout.rs  mod.rs  popup_utils.rs  rect.rs  render_utils.rs  renderer.rs  ui.rs
crates/cli/src/views/: command_inputs.rs  command_popup.rs  game.rs  handler.rs  menu.rs  mod.rs  options.rs  quick_action_popup.rs  selected_game_tile.rs
crates/core-db/: Cargo.toml
crates/core-db/src/: database.rs  lib.rs
crates/core-dtos/: Cargo.toml
crates/core-dtos/src/: lib.rs
crates/core-ecs/: Cargo.toml
crates/core-ecs/src/: core.rs  lib.rs
crates/core-ecs/src/bundles/: mod.rs
crates/core-ecs/src/bundles/views/: buildings.rs  command.rs  game.rs  logger.rs  main.rs  mod.rs  options.rs  quick_action.rs
crates/core-ecs/src/components/: mod.rs  rect.rs  sprite.rs
crates/core-ecs/src/components/primitives/: interaction.rs  mod.rs
crates/core-ecs/src/components/renderer/: asset.rs  mod.rs
crates/core-ecs/src/components/ui/: label.rs  list.rs  mod.rs  state.rs  store.rs  view.rs
crates/core-ecs/src/events/: mod.rs
crates/core-ecs/src/resources/: asset_resource.rs  camera_resource.rs  command_resource.rs  logger_resource.rs  mod.rs  subscriber_resource.rs  ui_store_resource.rs
crates/core-ecs/src/resources/assets/: cache.rs  mod.rs
crates/core-ecs/src/resources/camera/: camera.rs  mod.rs
crates/core-ecs/src/resources/clock/: clock.rs  mod.rs
crates/core-ecs/src/resources/command/: command_state.rs  mod.rs
crates/core-ecs/src/resources/logger/: logger.rs  mod.rs
crates/core-ecs/src/resources/store/: mod.rs  store.rs
crates/core-ecs/src/resources/subscriber/: config.rs  mod.rs  subscriber.rs
crates/core-ecs/src/schedulers/: game.rs  init.rs  mod.rs  ui.rs
crates/core-ecs/src/systems/: external_event.rs  mod.rs  renderer.rs
crates/core-ecs/src/systems/application/: application_scheduler.rs  application_systems.rs  mod.rs
crates/core-ecs/src/systems/command/: mod.rs  on_cancel_command.rs  on_command_did_update.rs  on_execute_command.rs  on_new_command.rs  on_pop_command.rs  on_push_command.rs  scheduler.rs
crates/core-ecs/src/systems/general/: application_did_close.rs  application_will_close.rs  mod.rs  on_application_did_close.rs  on_application_will_close.rs  on_application_will_resize.rs  scheduler.rs
crates/core-ecs/src/systems/init/: application_did_initialise.rs  application_will_initialise.rs  init_scheduler.rs  init_systems.rs  mod.rs  on_application_did_initialise.rs  on_application_will_initialise.rs  on_application_will_load_assets.rs  scheduler.rs
crates/core-ecs/src/systems/input/: mod.rs  on_cancel_input.rs  on_execute_input.rs  on_input_did_update.rs  on_new_input.rs  on_pop_input.rs  on_push_input.rs  scheduler.rs
crates/core-ecs/src/systems/quick_action/: mod.rs  on_cancel_quick_action.rs  on_new_quick_action.rs  on_quick_action_did_update.rs  scheduler.rs
crates/core-ecs/src/systems/renderer/: camera_systems.rs  cells_systems.rs  mod.rs  navigation_system.rs  on_renderer_did_update.rs  on_update_camera.rs  on_update_cells.rs  on_update_selected_cell.rs  on_update_selected_cell_asset.rs  on_update_selected_cell_position.rs  render_scheduler.rs  renderer_systems.rs  scheduler.rs  world_did_update.rs
crates/core-ecs/src/systems/tick/: mod.rs  on_tick_did_complete.rs  on_update_view_labels.rs  scheduler.rs  tick_scheduler.rs  tick_systems.rs
crates/core-ecs/src/systems/ui/: mod.rs  on_click.rs  on_close_popup.rs  on_close_view.rs  on_focus.rs  on_focus_next.rs  on_open_popup.rs  on_select.rs  on_select_by_id.rs  on_shortcut.rs  on_ui_did_update.rs  scheduler.rs  ui_scheduler.rs  ui_systems.rs
crates/core-ecs/src/systems/utils/: mod.rs  popup_utils.rs  view_utils.rs
crates/core-ecs/src/traits/: mod.rs  scheduler.rs
crates/core-ecs/src/views/: game_view.rs  menu_views.rs  mod.rs  popup_views.rs
crates/core-formatters/: Cargo.toml
crates/core-formatters/src/: digit_formatter.rs  digits.rs  lib.rs
crates/core-inputs/: Cargo.toml
crates/core-logic/: Cargo.toml
crates/core-serde/: Cargo.toml
crates/core-serde-utils/: Cargo.toml
crates/core-shared/: Cargo.toml
crates/core-state/: Cargo.toml
crates/core-state/src/: app.rs  app_state.rs  ecs.rs  ecs_state.rs  lib.rs
crates/core-terrain/: Cargo.toml
examples/terrian-generation/: Cargo.toml
(+264 files in other folders)
