[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/core-dtos",
  "crates/core-ecs",
  "crates/core-serde",
  "crates/core-shared",
  "crates/core-state",
  "crates/app/src-tauri"
]

[workspace.dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
bevy_ecs = "0.10.1"
serde = "1.0.162"
serde_json = "1.0.96"
async-trait = "0.1.68"
tokio = { version = "1.28.0", features=["full"]}