[workspace]
resolver = "2"
members = [
  "crates/app/src-tauri",
  "crates/core-dtos",
  "crates/core-ecs",
  "crates/core-serde-utils",
  "crates/core-shared",
  "crates/core-state",
  "crates/core-terrain",
  "crates/core-formatters",
  "crates/core-inputs",
  "examples/*"
]

[workspace.dependencies]
bevy_ecs = "0.10.1"
serde = "1.0.162"
serde_json = "1.0.96"
async-trait = "0.1.68"
tsify = "0.4.5"
wasm-bindgen = "0.2.86"
image = "0.24.6"
imageproc = "0.23.0"
log = "0.4.20"
noise = { version = "0.8.2", features = ["images"] }
tokio = { version = "1.28.0", features=["full"]}
