[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {workspace = true} 
crossterm = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true} 
async-trait = {workspace = true}
core-ecs = {path = "../core-ecs"}
core-serde = {path = "../core-serde"}
core-state = {path = "../core-state"}
core-shared = {path = "../core-shared"}
