[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
tui = {workspace = true} 
crossterm = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true} 
async-trait = {workspace = true}
debounce = {workspace = true}
core-ecs = {path = "../core-ecs"}
core-serde = {path = "../core-serde"}
core-state = {path = "../core-state"}
core-shared = {path = "../core-shared"}
core-dtos = {path = "../core-dtos"}
