[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[dependencies]
tui = {workspace = true} 
crossterm = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true} 
async-trait = {workspace = true}
core-ecs = {path = "../core-ecs"}
core-serde-utils = {path = "../core-serde-utils"}
core-state = {path = "../core-state"}
core-shared = {path = "../core-shared"}
core-dtos = {path = "../core-dtos"}
core-inputs = {path = "../core-inputs"}
