[package]
name = "core-ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = {workspace = true}
serde = {workspace = true} 
tokio = {workspace = true}
core-serde-utils = {path = "../core-serde-utils"}
core-shared = {path = "../core-shared"}
core-dtos = {path = "../core-dtos"}
core-terrain = {path = "../core-terrain"}
core-formatters = {path = "../core-formatters"}
core-db= {path = "../core-db"}
