[package]
name = "core-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
async-trait = {workspace = true}
core-shared = {path = "../core-shared"}
core-ecs = {path = "../core-ecs"}