[package]
name = "app"
version = "0.0.0"
description = "App"
authors = ["schr3da"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
tauri = { version = "1.3", features = ["shell-open"] }
core-ecs = {path = "../../core-ecs"}
core-serde = {path = "../../core-serde"}
core-state = {path = "../../core-state"}
core-shared = {path = "../../core-shared"}
core-dtos = {path = "../../core-dtos"}


[features]
custom-protocol = ["tauri/custom-protocol"]
