[package]
name = "app"
version = "0.0.0"
description = "App"
authors = ["schr3da"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
tauri = { version = "1.3", features = [ "macos-private-api", "os-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
core-ecs = {path = "../../core-ecs"}
core-serde = {path = "../../core-serde"}
core-state = {path = "../../core-state"}
core-shared = {path = "../../core-shared"}
core-dtos = {path = "../../core-dtos"}


[features]
custom-protocol = ["tauri/custom-protocol"]
